corpus/cpp/deleted_function/case-01/snapshots/gcc15/dual_sink_structured/render.concise.txt
error: [unavailable_api] use of deleted function 'NoCopy::NoCopy(const NoCopy&)' @ src/main.cpp:10:5
name: NoCopy::NoCopy(const NoCopy&)
use : take(value);
from: src/main.cpp:3:5 NoCopy(const NoCopy&) = delete;
| src/main.cpp:10:5
|     take(value);
|     ^

note: [unknown] initializing argument 1 of 'void take(NoCopy)' @ src/main.cpp:6:11
note: wrapper confidence is low; verify against the preserved raw diagnostics
raw : initializing argument 1 of 'void take(NoCopy)'
| src/main.cpp:6:11
| void take(NoCopy value) {}
|           ^
details: --formed-explain | raw: --formed-raw